--- a/ring_of_fire/templates/play.html
+++ b/ring_of_fire/templates/play.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href={{ url_for('static', filename='bootstrap/css/bootstrap.css') }}>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ring of Fire</title>
 </head>
 <body>
+<div class="text-center">
     {% if card != "END OF DECK" %}
     <p>{{ name }}'s Turn!</p>
-    <img src={{ url_for('static', filename='/img/') }}{{ card }} alt="{{ card }}">
+    <img src={{ url_for('static', filename='/cards/') }}{{ card }}.jpg class="rounded" alt="{{ card }}">
+    <p> {{ card }} </p>
     <form method="post">
         <input type="submit" value="Next">
     {% else %}
         <p>END OF DECK</p>
     {% endif %}
     </form>
+</div>
 </body>
 </html>
