--- a/ring_of_fire/templates/play.html
+++ b/ring_of_fire/templates/play.html
@@ -10,6 +10,7 @@
     {% if card != "END OF DECK" %}
     <p>{{ name }}'s Turn!</p>
     <img src={{ url_for('static', filename='/cards/') }}{{ card }}.jpg class="rounded" alt="{{ card }}">
+    <p>{{ prompt }}</p>
     <form method="post">
         <input type="submit" value="Next">
     {% else %}
