htmp template updates and added space for rules, player names, and thumbmaster

--- a/ring_of_fire/templates/assign.html
+++ b/ring_of_fire/templates/assign.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Assigning Players</title>
 </head>
-<body>
+<body style="background-color:floralwhite;">
 <div class="container">
     <div class="row">
         <div class="offset-md-5">
@@ -24,13 +24,3 @@
 </div>
 </body>
 </html>
-
-
-
-
-<!--{% for _ in range(number) %}-->
-<!--    <form method="post">-->
-<!--      <input placeholder="Player {{ _ + 1 }}" name="player{{ _ }}" autocomplete="off"><br>-->
-<!--{% endfor %}-->
-<!--      <button type="submit">Submit</button>-->
-<!--    </form>-->
