--- a/ring_of_fire/templates/index.html
+++ b/ring_of_fire/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Ring of Fire</title>
 </head>
-<body>
+<body style="background-color:floralwhite;">
 <div class="container">
     <div class="row">
         <div class="offset-md-5">
