various enhancements. drinking partner tracking. pop up when you pop the tab

--- a/ring_of_fire/templates/in_progress.html
+++ b/ring_of_fire/templates/in_progress.html
@@ -1,3 +1,10 @@
+<script>
+    function popup(){
+        alert("{{ name }}, YOU POPPED THE TOP!\nFINISH YOUR DRINK!!!!");
+        }
+</script>
+
+
 <div class="card" style="width: 18rem;">
     <div class="card-header">
         <h5 class="card-text text-center">{{ name }}'s Turn!</h5>
@@ -10,6 +17,13 @@
         {% if card[0] == "K" %}
         <input class="form-control" placeholder="Enter Custom Rule" name="rule" autocomplete="off">
         {% endif %}
+        {% if card[0] == "8" %}
+        <input class="form-control" placeholder="Enter Drinking Partner" name="partners" autocomplete="off">
+        {% endif %}
+        {% if pop %}
+        <button class="btn btn-dark btn-block" type="submit" onclick="popup()">Next</button>
+        {% else %}
         <button class="btn btn-dark btn-block" type="submit">Next</button>
+        {% endif %}
     </form>
 </div>
