stable version, still could use some work

--- a/j_party/templates/assign.html
+++ b/j_party/templates/assign.html
@@ -17,7 +17,7 @@
                     <input placeholder="Player {{ i + 1 }}" name="player{{ i }}" autocomplete="off">
                     <br>
                 {% endfor %}
-                    <button class="btn btn-dark btn-block" type="submit">Submit</button>
+                    <button class="btn btn-primary btn-block" type="submit">Submit</button>
                 </form>
             </div>
         </div>
