--- a/j_party/templates/play.html
+++ b/j_party/templates/play.html
@@ -17,40 +17,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <div class="container">
-        <div class="row">
-            {% for item in gamedata %}
-            <div class="card">
-                <div class="card-header">
-                    {{ item }}
-                </div>
-                <ul class="list-group list-group-flush">
-                    {% for data in gamedata[item] %}
-                    {% if data['active'] %}
-                    <li class="list-group-item">
-                        <form method="post">
-                            <input type="hidden" name="id" value={{ data['question_id'] }}>
-                            <button class="btn btn-primary" type="submit">{{ data['value'] }}</button>
-                        </form>
-                    </li>
-                    {% endif %}
-                    {% endfor %}
-                </ul>
-            </div>
-            {% endfor %}
-            <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-header">
-                        <h5 class="card-text text-center">Player Score</h5>
-                    </div>
-                    <ul class="list-group list-group-flush">
-                        {% for player in players %}
-                        <li class="list-group-item">{{ player[0] }}: ${{ player[1] }}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% if current_round == "first" %}
+    <h5 class="text-center">First Round!</h5>
+    {% elif current_round == "second" %}
+    <h5 class="text-center">Second Round!</h5>
+    {% else %}
+    <h5 class="text-center">Final Round!</h5>
+    {% endif %}
+
+    {% if current_round != "final" %}
+        {% include 'rounds.html' %}
+    {% else %}
+        {% include 'final.html' %}
+    {% endif %}
+
+
   </body>
 </html>
