--- a/j_party/templates/question.html
+++ b/j_party/templates/question.html
@@ -7,10 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='countdown.css') }}">
     <title>J-Party!</title>
   </head>
-  <body>
+  <body style="background-color:floralwhite;">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -19,10 +19,27 @@
     <div class="card text-center">
         <div class="card-body">
             <h5 class="card-title">{{ question }}</h5>
+            {% if has_wager %}
+            <form style="text-align:center" method="post">
+                <br>
+                {% for player in players %}
+                <input type="hidden" name="player" value="{{ player[0] }}">
+                {{ player[0] }}:
+                <input type="radio" id="correct" name="{{ player[0] }}" value="correct">
+                <label for="correct">Correct</label>
+                <input type="radio" id="incorrect" name="{{ player[0] }}" value="incorrect">
+                <label for="incorrect">Incorrect</label>
+                <br>
+                <br>
+                {% endfor %}
+                <button class="btn btn-primary" type="submit">Submit</button>
+            </form>
+            {% else %}
             <form style="text-align:center" method="post">
                 <label>Select Player</label>
                 <br>
                 <select name="player">
+                    <option selected disabled>Select Player</option>
                     {% for player in players %}
                     <option>{{ player[0] }}</option>
                     {% endfor %}
@@ -31,6 +48,18 @@
                 <button class="btn btn-primary" type="submit" name="status" value="correct">Correct</button>
                 <button class="btn btn-primary" type="submit" name="status" value="incorrect">Incorrect</button>
             </form>
+            {% endif %}
+            <div class="container py-5">
+                <div class="py-5">
+                    <div class="row">
+                        <div class="col-lg-8 mx-auto">
+                            <div class="rounded bg-gradient-1 text-white shadow p-5 text-center mb-5">
+                                Timer
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
   </body>
