finished ring of fire question master feature

--- a/j_party/templates/question.html
+++ b/j_party/templates/question.html
@@ -18,7 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <div class="card text-center">
         <div class="card-body">
-            <h5 class="card-title">{{ question }}</h5>
+            <h5 class="card-title">{{ question|safe }}</h5>
             {% if has_wager %}
             <form style="text-align:center" method="post">
                 <br>
