--- a/j_party/templates/rounds.html
+++ b/j_party/templates/rounds.html
@@ -11,7 +11,7 @@
                     <div class="col text-center">
                         {% if data['active'] %}
                         <form method="post">
-                            <input type="hidden" name="id" value={{ data['question_id'] }}>
+                            <input type="hidden" name="id" value="{{ data['question_id'] }}">
                             <button class="btn btn-primary" type="submit">{{ data['value'] }}</button>
                         </form>
                         {% else %}
