--- a/app/templates/ring_of_fire/game_over.html
+++ b/app/templates/ring_of_fire/game_over.html
@@ -1,3 +1,6 @@
+<!--Imported by play.html-->
+
+
 <div class="card" style="width: 18rem;">
     <div class="card-header">
         <h5 class="card-text text-center">End of Deck</h5>
@@ -6,6 +9,6 @@
     <h5 class="card-title text-center">GAME OVER!!</h5>
 </div>
     <form method="post">
-        <a href={{ url_for("home") }} class="btn btn-dark btn-block" type="submit">Play Again</a>
+        <a href="{{ url_for('home') }}" class="btn btn-dark btn-block" type="submit">Play Again</a>
     </form>
 </div>
