database models and implementation

--- a/app/templates/ring_of_fire/game_over.html
+++ b/app/templates/ring_of_fire/game_over.html
@@ -9,6 +9,6 @@
     <h5 class="card-title text-center">GAME OVER!!</h5>
 </div>
     <form method="post">
-        <a href="{{ url_for('home') }}" class="btn btn-dark btn-block" type="submit">Play Again</a>
+        <a href="{{ url_for('ring_of_fire.home') }}" class="btn btn-dark btn-block" type="submit">Play Again</a>
     </form>
 </div>
