--- a/app/templates/ring_of_fire/play.html
+++ b/app/templates/ring_of_fire/play.html
@@ -13,7 +13,7 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     {% for player in players %}
-                    <li class="list-group-item">Player {{ loop.index }}: {{ player[0] }}</li>
+                    <li class="list-group-item">Player {{ loop.index }}: {{ player.name }}</li>
                     {% endfor %}
                 </ul>
             </div>
@@ -32,7 +32,7 @@
                 </div>
                 {% for item in rules %}
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">{{ item[0] }}: {{ item[1] }}</li>
+                    <li class="list-group-item">{{ item[0].name }}: {{ item[1].rule }}</li>
                 </ul>
                 {% endfor %}
                 <div class="card-header">
@@ -56,7 +56,7 @@
                 </div>
                 {% for partner in partners %}
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">{{ partner[0] }} & {{ partner[1] }}</li>
+                    <li class="list-group-item">{{ partner[0].name }} & {{ partner[1].partner }}</li>
                 </ul>
                 {% endfor %}
             </div>
