added cards remaining, and added a way to create sub dirs so db can be created

--- a/app/templates/ring_of_fire/in_progress.html
+++ b/app/templates/ring_of_fire/in_progress.html
@@ -10,6 +10,7 @@
 <div class="card" style="width: 18rem;">
     <div class="card-header">
         <h5 class="card-text text-center">{{ name }}'s Turn!</h5>
+        <h6 class="card-text text-center">[{{ cards_remain + 1 }} Cards Remaining]</h6>
     </div>
     <div class="card-body">
         <img src="{{ url_for('static', filename='ring_of_fire/cards/') }}{{ card }}.jpg" class="card-img-top" alt="{{ card }}">
