some changes to jparty templates. mismatching bootstrap versions fixed. stable, need to work on forms for jparty now

--- a/app/templates/j_party/assign.html
+++ b/app/templates/j_party/assign.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>J-Party!</title>
-</head>
-<body style="background-color:floralwhite;">
+{% extends "base.html" %}
+
+{%  block content %}
 <div class="container">
     <div class="row">
         <div class="offset-md-5">
@@ -23,5 +17,4 @@
         </div>
     </div>
 </div>
-</body>
-</html>
+{% endblock content %}
