--- a/app/templates/j_party/end.html
+++ b/app/templates/j_party/end.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='countdown.css') }}">
-    <title>J-Party!</title>
-</head>
-<body style="background-color:floralwhite;">
+{%  extends "base.html" %}
+{% block content %}
 <div class="card text-center" style="width: 30rem;margin:0 auto;">
     <h5>{{ winner }} wins!</h5>
     <div class="card-header">
@@ -22,5 +11,4 @@
         {% endfor %}
     </ul>
 </div>
-</body>
-</html>
+{% endblock content %}
