--- a/app/templates/j_party/rounds.html
+++ b/app/templates/j_party/rounds.html
@@ -11,8 +11,9 @@
                             <div class="text-center">
                                 {% if data['active'] %}
                                     <form method="post">
-                                        {% include "j_party/question_modal.html" %}
+                                        <button class="btn btn-primary" name="id" value="{{ data['question_id'] }}">{{ data['value'] }}</button>
                                     </form>
+                                    {% include "j_party/question_modal.html" %}
                                 {% else %}
                                     <button class="btn btn-secondary">{{ data['value'] }}</button>
                                 {% endif %}
