stable. Added a times up button, but a player still needs to be selected to use it. Question will deactivate and no points will be rewarded or subtracted. Added titles to j-party pages. updated answer print to be more obvious

--- a/app/templates/j_party/assign.html
+++ b/app/templates/j_party/assign.html
@@ -12,9 +12,9 @@ J-Party! - Assigning Players
                 <p style="text-align:center">Enter Player Names</p>
                 {% for i in range(3) %}
                 <form style="text-align:center" method="post">
-                    <input placeholder="Player {{ i + 1 }}" name="player{{ i }}" autocomplete="off">
-                    <br>
+                    <input class="form-control" placeholder="Player {{ i + 1 }}" name="player{{ i }}" autocomplete="off">
                 {% endfor %}
+                    <br>
                     <button class="btn btn-primary btn-block" type="submit">Submit</button>
                 </form>
             </div>
