--- a/app/templates/j_party/play.html
+++ b/app/templates/j_party/play.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}J-Party!{% endblock title %}
+
 {% block content %}
 
     {% if current_round == "first" %}
